# cell_tracking_metrics

./: README.md
AOGM_EVA/Mac/: DETMeasure  SEGMeasure  TRAMeasure
AOGM_EVA/testing_dataset/03_RES/: TRA_log.txt
Sources/AOGMMeasure/: AOGMMeasure.cpp  CMakeLists.txt
Sources/TRAMeasure/: CMakeLists.txt  TRAMeasure.cpp
